feat: Complete infrastructure template with GitOps, monitoring, and comprehensive docs
- Enhanced README with cross-platform support and FAQ
- Added comprehensive documentation (FAQ, Enterprise guides, Helm vs YAML)
- Implemented cert-manager and network-policies modules
- Added deployment profiles (minimal, standard, full)
- Created cross-platform test scripts (PowerShell + Bash)
- Added ArgoCD GitOps bootstrap configuration
- Cleaned up redundant documentation files
- Security audit completed - no secrets exposed
- Added CI/CD workflows for Terraform validation

Infrastructure is now production-ready and fully documented.

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 # Sensitive files
 **/terraform.tfvars
 !**/terraform.tfvars.example
+**/.credentials
 
 # Claude AI context (contains sensitive project info)
 CLAUDE.md
